# openzync-core

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  COMMERCIAL-LICENSE.md  Makefile  README.md  alembic.ini  fronntend-rdesign.plan  integrate-falkordb.md  landing.md  package-lock.json  package.json  phase1-plan.md  phase3_plan.md  plan_pphase2.md  pyproject.toml  requirements.txt  sec-audit.md  temporal.md
.github/workflows/: benchmark.yml  ci.yml  publish-sdk-python.yml
.plan/: backprop-linkages.md  modularize-hybrid-retriever.md  multi-backend-support.md  optimize-speed.md
07-user-session-mgmt/: 01-user-crud.md  02-session-crud.md  03-gdpr-compliance.md
08-api-gateway/: 01-app-setup.md  02-error-handling.md  03-pagination.md  04-request-validation.md  05-openapi-generation.md
config/defaults/: org_config.yaml
core/: __init__.py  _version.py  arq.py  config.py  cursor.py  db.py  email.py  events.py  exceptions.py  graph_backend.py  graphiti.py  llm.py  llm_backends.py  logging.py  openbao.py  openbao_exceptions.py  openbao_settings.py  org_config.py  prompt_manifest.py  redis.py  surreal_pool.py  transit.py
core/secret_store/: __init__.py  fernet.py  interface.py
dependencies/: __init__.py  auth.py  db.py  email.py  org_config.py  project_auth.py  services.py
frontend/: next.config.ts
infra/: .env.production  Dockerfile.openbao-tooling  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.vps.yml  docker-compose.yml
infra/alloy/: config.alloy
middleware/: __init__.py  audit.py  auth.py  auth_throttle.py  logging.py  metrics.py  rate_limit.py  request_id.py  security_headers.py  tracing.py
migrations/: env.py
models/: __init__.py  api_key.py  audit_log.py  base.py  custom_instruction.py  dialog_classification.py  episode.py  extraction_schema.py  fact.py  graph_entity.py  graph_observation.py  llm_usage.py  oauth_account.py  organization.py  project.py  project_member.py  prompt_template.py  refresh_token.py  session.py  structured_extraction.py  user.py  webhook.py
oss/sdk-python/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
oss/sdk-python/openzep/: __init__.py  _errors.py  _http.py  _pagination.py  client.py  facts.py  graph.py  memory.py  projects.py  sessions.py  users.py
oss/sdk-python/openzep/integrations/: __init__.py
oss/sdk-python/openzep/integrations/langchain/: __init__.py  memory.py  message_history.py  retriever.py
oss/sdk-python/openzep/integrations/langchain/tools/: __init__.py  facts.py  graph.py
oss/sdk-python/openzep/models/: __init__.py  facts.py  memory.py  session.py  user.py
oss/sdk-python/src/openzync/: __init__.py  _errors.py  _http.py  _pagination.py  _version.py  client.py  facts.py  graph.py  memory.py  projects.py  sessions.py  users.py
oss/sdk-python/src/openzync/integrations/: __init__.py
oss/sdk-python/src/openzync/integrations/langchain/: __init__.py  memory.py  message_history.py  retriever.py
oss/sdk-python/src/openzync/integrations/langchain/tools/: __init__.py  facts.py  graph.py
oss/sdk-python/src/openzync/models/: __init__.py  graph.py  project.py  session.py
oss/sdk-python/tests/: __init__.py  conftest.py  test_errors.py  test_facts.py  test_graph.py  test_memory.py  test_projects.py  test_sessions.py  test_users.py
oss/sdk-python/tests/integrations/langchain/: __init__.py  test_memory.py  test_message_history.py  test_retriever.py  test_tools.py
repositories/: __init__.py  api_key_repository.py  audit_log_repository.py  auth_repository.py  custom_instruction_repository.py  dialog_classification_repository.py  entity_repository.py  episode_repository.py  extraction_schema_repository.py  fact_repository.py  mappers.py  oauth_repository.py  observation_repository.py  organization_repository.py  project_repository.py  prompt_template_repository.py  session_repository.py  structured_extraction_repository.py  user_repository.py  webhook_repository.py
routers/: __init__.py  admin.py  admin_api_keys.py  admin_metrics.py  admin_org_config.py  admin_organizations.py  admin_quick_actions.py  admin_schemas.py  admin_stats.py  admin_webhooks.py  api_key_self.py  audit_log.py  auth.py  chat.py  classifications.py  context.py  facts.py  graph.py  health.py  memory.py  metrics.py  oauth.py  project_api_keys.py  projects.py  search.py  sessions.py  structured_extractions.py  users.py
schemas/: __init__.py  admin_metrics.py  admin_stats.py  api_keys.py  audit_log.py  auth.py  chat.py  classifications.py  common.py  context.py  custom_instructions.py  email.py  extraction_schemas.py  facts.py  graph.py  health.py  llm_outputs.py  mappers.py  memory.py  oauth.py  observation.py  organization_config.py  organizations.py  pii.py  projects.py  prompt_templates.py  sessions.py  structured_extractions.py  user_summary.py  users.py  webhook.py
scripts/: backup.sh  check-credentials.sh  create_dev_key.py  deploy.sh  e2e_test.sh  entrypoint_api.sh  entrypoint_migrate.sh  entrypoint_worker.sh  init_openbao.sh  init_postgres.sh  reembed_episodes.py  reembed_facts.py  run_dev.sh  seed_load_test.py  setup-nginx.sh  write_db_to_openbao.sh
services/: api_key_service.py  audit_log_service.py  auth_service.py  cache_service.py  chat_service.py  classification_service.py  context_formatter.py  context_service.py  custom_instruction_service.py  email_service.py  fact_service.py  graph_service.py  hybrid_retriever.py  idempotency_service.py  mcp_client.py  memory_service.py  metrics_service.py  oauth_service.py  observation_service.py  org_config_service.py  organization_service.py  otp_service.py  pii_service.py  project_service.py  quick_actions_service.py  reranker.py  schema_service.py  session_service.py  structured_extraction_service.py  temporal_service.py  user_service.py  user_summary_service.py  webhook_service.py
streamlit_chat/: .env.example  app.py  requirements.txt
tests/: conftest.py
utils/: __init__.py  crypto.py  password.py
workers/: __init__.py  backend.py  email_jobs.py
(+257 files in other folders)
