[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openzep-py"
version = "0.1.0"
description = "Python SDK for OpenZep — open-source agent memory platform with persistent, queryable, graph-based memory for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "TheLinkAI", email = "opensource@thelink.ai" },
]

keywords = ["agent", "memory", "graph", "ai", "RAG", "llm", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]
langchain = [
    "langchain-core>=0.3.0,<0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["openzep*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
