[build-system]
requires = ["hatchling >= 1.27", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "openzync"
dynamic = ["version"]
description = "Python SDK for OpenZep — open-source agent memory platform with persistent, queryable, graph-based memory for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "TheLinkAI", email = "opensource@thelink.ai" },
]
keywords = ["agent", "memory", "graph", "ai", "RAG", "llm", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx >= 0.27",
    "pydantic >= 2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]
langchain = [
    "langchain-core>=0.3.0,<0.4.0",
]

[project.urls]
Homepage = "https://github.com/rohnsha0/openzep/tree/master/oss/sdk-python"
Issues = "https://github.com/rohnsha0/openzep/issues"
Changelog = "https://github.com/rohnsha0/openzep/blob/master/oss/sdk-python/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.3.0"
raw-options = { search_parent_directories = true }

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/openzync"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
